# airbnb-review-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml  scrape_reviews.py
