[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "airbnb-review-scraper"
version = "1.0.0"
description = "Automatically scrape all reviews from any Airbnb Experience"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "Tran Ngoc Quang"},
]
keywords = ["airbnb", "scraper", "reviews", "web-scraping", "graphql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/airbnb-review-scraper"
Repository = "https://github.com/YOUR_USERNAME/airbnb-review-scraper"
Issues = "https://github.com/YOUR_USERNAME/airbnb-review-scraper/issues"

[project.scripts]
airbnb-reviews = "scrape_reviews:main"
